syntax = "proto3";

package microservices.feeds;

import "google/protobuf/empty.proto";

option go_package = "microservices/feeds/cmd/server/grpc/api/proto/generated";

service FeedsService {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc GetFeed(GetFeedRequest) returns (GetFeedResponse);
}

message GetFeedRequest {
  int32 user_id = 1;

  int64 page_size = 2;
  int64 offset    = 3;
}

message GetFeedResponse {
  repeated int32 post_ids = 1;
}
