syntax = "proto3";

package microservices.posts;

import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";
import "microservices/posts/cmd/server/grpc/api/proto/types.proto";

option go_package = "microservices/posts/cmd/server/grpc/api/proto/generated";

service PostsService {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);

  rpc GetPostsOfUser(GetPostsOfUserRequest) returns (GetPostsResponse);
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
}

message CreatePostRequest {
  int32  owner_id    = 1;
  string description = 2;
}

message CreatePostResponse {
  int32 post_id = 1;
}

message GetPostsOfUserRequest {
  int32 owner_id = 1;

  PaginationArgs pagination_args = 2;
}

message GetPostsRequest {
  repeated int32 post_ids = 1;
}

message GetPostsResponse {
  repeated Post posts = 1;
}
