syntax = "proto3";

package events.posts;

option go_package = "backend/shared/pkg/events/proto/generated/posts";

message PostCreatedEvent {
  int32 id       = 1;
  int32 owner_id = 2;
}
